Fix file paths in Admin.html
Updated file paths for stylesheet and script references.

--- a/Public/Admin.html
+++ b/Public/Admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MAT College</title>
-    <link rel="stylesheet" href="C:\Users\HP\Desktop\unified mentor - Copy\Student-Teacher Booking Appointment\Public\css\style.css">
+    <link rel="stylesheet" href="\Public\css\style.css">
 </head>
 <body>
 
@@ -24,11 +24,12 @@
 <center><button class="button" onclick="addTeacherUI()">Add Teacher</button></center><br>
 
 
-<script type="module" src="C:\Users\HP\Desktop\unified mentor - Copy\Student-Teacher Booking Appointment\Public\Admin.html"></script>
+<script type="module" src="\Public\Admin.html"></script>
 <!-- Footer -->
     <footer>
         <p>© 2026 MAT College. All rights reserved.</p>
     </footer>
 
 </body>
+
 </html>
