--- a/Public/Teacher.html
+++ b/Public/Teacher.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MAT College</title>
-    <link rel="stylesheet" href="C:\Users\HP\Desktop\unified mentor - Copy\Student-Teacher Booking Appointment\Public\css\style.css">
+    <link rel="stylesheet" href="\Public\css\style.css">
 </head>
 <body>
 
@@ -36,11 +36,12 @@
             </div>
         </div>
     </section>
-<script type="module" src="C:\Users\HP\Desktop\unified mentor - Copy\Student-Teacher Booking Appointment\Public\js\Teacher.js"></script>
+<script type="module" src="\Public\js\Teacher.js"></script>
 <!-- Footer -->
     <footer>
         <p>© 2026 MAT College. All rights reserved.</p>
     </footer>
 
 </body>
+
 </html>
