Fix HTML structure and update stylesheet path

--- a/Public/login.html
+++ b/Public/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MAT College</title>
-    <link rel="stylesheet" href="C:\Users\HP\Desktop\unified mentor - Copy\Student-Teacher Booking Appointment\Public\css\style.css">
+    <link rel="stylesheet" href="\Public\css\style.css">
 </head>
 <body>
 
@@ -27,4 +27,5 @@
     </footer>
 
 </body>
+
 </html>
