Refactor HTML for relative paths and cleanup
Updated file paths for CSS and images to relative paths and removed unnecessary escape characters.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MAT College</title>
-    <link rel="stylesheet" href="C:\Users\HP\Desktop\unified mentor - Copy\Student-Teacher Booking Appointment\Public\css\style.css">
+    <link rel="stylesheet" href="\css\style.css">
 </head>
 <body>
 
@@ -39,7 +39,7 @@
             MAT College was established in 2000 with the vision to provide
             high-quality education and develop future leaders.
         </p>
-        <img src="C:\Users\HP\Desktop\unified mentor - Copy\test\imges\college.png" alt="College">
+        <img src="college.png" alt="College">
     </section>
 
     <!-- Courses -->
@@ -49,19 +49,19 @@
         <div class="course-card">
             <h3>Computer Science</h3>
             <p>Learn programming, AI, and software development.</p>
-            <img src="C:\Users\HP\Desktop\unified mentor - Copy\test\imges\pic1.png">
+            <img src="pic1.png">
         </div>
 
         <div class="course-card">
             <h3>Mechanical Engineering</h3>
             <p>Study machines, robotics, and manufacturing.</p>
-            <img src="C:\Users\HP\Desktop\unified mentor - Copy\test\imges\pic2.png">
+            <img src="pic2.png">
         </div>
 
         <div class="course-card">
             <h3>Business Administration</h3>
             <p>Learn management, marketing, and finance.</p>
-            <img src="C:\Users\HP\Desktop\unified mentor - Copy\test\imges\pic3.png">
+            <img src="pic3.png">
         </div>
 
     </section>
@@ -80,4 +80,5 @@
     </footer>
 
 </body>
+
 </html>
