Fix HTML structure and update file paths

--- a/Student.html
+++ b/Student.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MAT College</title>
-    <link rel="stylesheet" href="C:\Users\HP\Desktop\unified mentor - Copy\Student-Teacher Booking Appointment\Public\css\style.css">
+    <link rel="stylesheet" href="\css\style.css">
 </head>
 <body>
 
@@ -31,11 +31,12 @@
 
 
 
-<script type="module" src="C:\Users\HP\Desktop\unified mentor - Copy\Student-Teacher Booking Appointment\Public\js\Student.js"></script>
+<script type="module" src="\js\Student.js"></script>
 <!-- Footer -->
     <footer>
         <p>© 2026 MAT College. All rights reserved.</p>
     </footer>
 
 </body>
+
 </html>
