Fix HTML structure and update stylesheet path

--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MAT College</title>
-    <link rel="stylesheet" href="\css\style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -29,3 +29,4 @@
 </body>
 
 </html>
+
