--- a/Admin.html
+++ b/Admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MAT College</title>
-    <link rel="stylesheet" href="\css\style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -33,3 +33,4 @@
 </body>
 
 </html>
+
