Fix HTML formatting and update script path

--- a/Student.html
+++ b/Student.html
@@ -31,7 +31,7 @@
 
 
 
-<script type="module" src="\js\Student.js"></script>
+<script type="module" src="js/Student.js"></script>
 <!-- Footer -->
     <footer>
         <p>© 2026 MAT College. All rights reserved.</p>
@@ -40,4 +40,5 @@
 </body>
 
 </html>
+
 
