--- a/Teacher.html
+++ b/Teacher.html
@@ -36,7 +36,7 @@
             </div>
         </div>
     </section>
-<script type="module" src="\js\Teacher.js"></script>
+<script type="module" src="js/Teacher.js"></script>
 <!-- Footer -->
     <footer>
         <p>© 2026 MAT College. All rights reserved.</p>
@@ -45,4 +45,5 @@
 </body>
 
 </html>
+
 
