--- a/Admin.html
+++ b/Admin.html
@@ -24,7 +24,7 @@
 <center><button class="button" onclick="addTeacherUI()">Add Teacher</button></center><br>
 
 
-<script type="module" src="\Admin.html"></script>
+<script type="module" src="js/Admin.js"></script>
 <!-- Footer -->
     <footer>
         <p>© 2026 MAT College. All rights reserved.</p>
@@ -33,4 +33,5 @@
 </body>
 
 </html>
+
 
